--- a/styles.css
+++ b/styles.css
@@ -52,12 +52,6 @@ main {
     margin: 0;
 }
 
-.status {
-    font-size: 1.2rem;
-    color: gray;
-    margin-bottom: 10px;
-}
-
 h1 {
     font-size: 3rem;
     margin: 10px 0 5px 0; 
@@ -93,29 +87,95 @@ aside img {
     margin: 0 auto; 
 }
 
-footer {
-    background-color: white;
-    color: black;
-    padding: 20px;
+.projets {
     text-align: center;
+    padding: 50px 20px;
+    background-color: black;
 }
 
-.skills {
+.projets h2 {
+    font-size: 2rem;
+    margin-bottom: 30px;
+    color: white;
+}
+
+.cards {
     display: flex;
     justify-content: center;
-    gap: 50px;
-    margin-bottom: 20px;
+    gap: 20px;
+    flex-wrap: wrap;
 }
 
-.category h3 {
-    margin-bottom: 5px;
+.card {
+    background-color: #1c1c1c;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 300px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    color: white;
 }
 
-.download-cv {
-    background-color: white;
-    color: black;
-    border: 2px solid black;
-    padding: 10px 20px;
-    cursor: pointer;
+.card-header {
+    height: 150px;
+    background-color: #333; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden; 
+    border-bottom: 1px solid #444;
+}
+
+.card-header img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+}
+
+
+.card-body {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 200px;
+}
+
+.card-body h3 {
+    margin: 0 0 10px 0;
+    font-size: 1.5rem;
+}
+
+.card-body p {
+    font-size: 0.9rem;
+    color: #aaa;
+    flex-grow: 1;
+}
+
+.tags {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.tag {
+    background-color: #444;
+    color: white;
+    padding: 5px 10px;
     border-radius: 5px;
+    font-size: 0.8rem;
+}
+
+.code-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+    font-size: 0.9rem;
+}
+
+.code-link img {
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
 }
